# TrackCAN

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
DataLogger_Node/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  main.cpp  prj.conf
DataLogger_Node/boards/: blink.overlay
DataLogger_Node/src/: main.c
Ethanol_Node/: CMakeLists.txt  main.c
UI/Bigger_Dash/: Bigger_Dash.sll  Bigger_Dash.spj  project.info
UI/DigitalDash/: DigitalDash.sll  DigitalDash.slp  DigitalDash.spj  Digital_Dash-PNG_Export.fig  project.info
UI/DigitalDash/assets/: ui_font_BOOST.fcfg  ui_font_Gauges.fcfg  ui_font_MPH.fcfg
UI/DigitalDash_480x272/SquareLine_Project/: .cproject  .project  LICENSE.md  README.md  STM32H7B3LIHXQ_FLASH.ld  STM32H7B3LIHXQ_RAM.ld  ebike_demo_272 Debug.launch  lv_conf.h  lv_port_stm32h7b3i_disco.launch
UI/DigitalDash_480x272/SquareLine_Project/CMSIS/Device/ST/STM32H7xx/Include/: stm32h7xx.h
UI/DigitalDash_480x272/SquareLine_Project/HAL_Driver/Inc/: stm32h7xx_hal_adc.h  stm32h7xx_hal_adc_ex.h  stm32h7xx_hal_cec.h  stm32h7xx_hal_comp.h  stm32h7xx_hal_conf_template.h  stm32h7xx_hal_cordic.h  stm32h7xx_hal_cortex.h  stm32h7xx_hal_crc.h  stm32h7xx_hal_crc_ex.h  stm32h7xx_hal_cryp.h  stm32h7xx_hal_cryp_ex.h  stm32h7xx_hal_dac.h  stm32h7xx_hal_dac_ex.h  stm32h7xx_hal_dcmi.h  stm32h7xx_hal_def.h  stm32h7xx_hal_dfsdm.h  stm32h7xx_hal_dfsdm_ex.h  stm32h7xx_hal_dma.h  stm32h7xx_hal_dma2d.h  stm32h7xx_hal_dma_ex.h  stm32h7xx_hal_dsi.h  stm32h7xx_hal_dts.h  stm32h7xx_hal_eth.h  stm32h7xx_hal_eth_ex.h  stm32h7xx_hal_exti.h  stm32h7xx_hal_fdcan.h  stm32h7xx_hal_flash.h  stm32h7xx_hal_flash_ex.h  stm32h7xx_hal_fmac.h  stm32h7xx_hal_gfxmmu.h  stm32h7xx_hal_gpio.h  stm32h7xx_hal_gpio_ex.h  stm32h7xx_hal_hash.h  stm32h7xx_hal_hash_ex.h  stm32h7xx_hal_hcd.h  stm32h7xx_hal_hrtim.h  stm32h7xx_hal_hsem.h  stm32h7xx_hal_i2c.h  stm32h7xx_hal_i2c_ex.h  stm32h7xx_hal_i2s.h  (+58 more)
UI/DigitalDash_480x272/SquareLine_Project/HAL_Driver/Inc/Legacy/: stm32h7xx_hal_eth_legacy.h
UI/DigitalDash_480x272/SquareLine_Project/HAL_Driver/Src/: stm32h7xx_hal.c  stm32h7xx_hal_adc.c  stm32h7xx_hal_adc_ex.c  stm32h7xx_hal_cec.c  stm32h7xx_hal_comp.c  stm32h7xx_hal_cordic.c  stm32h7xx_hal_cortex.c  stm32h7xx_hal_crc.c  stm32h7xx_hal_crc_ex.c  stm32h7xx_hal_cryp.c  stm32h7xx_hal_cryp_ex.c  stm32h7xx_hal_dac.c  stm32h7xx_hal_dac_ex.c  stm32h7xx_hal_dcmi.c  stm32h7xx_hal_dfsdm.c  stm32h7xx_hal_dfsdm_ex.c  stm32h7xx_hal_dma.c  stm32h7xx_hal_dma2d.c  stm32h7xx_hal_dma_ex.c  stm32h7xx_hal_dsi.c  stm32h7xx_hal_dts.c  stm32h7xx_hal_eth.c  stm32h7xx_hal_eth_ex.c  stm32h7xx_hal_exti.c  stm32h7xx_hal_fdcan.c  stm32h7xx_hal_flash.c  stm32h7xx_hal_flash_ex.c  stm32h7xx_hal_fmac.c  stm32h7xx_hal_gfxmmu.c  stm32h7xx_hal_gpio.c  stm32h7xx_hal_hash.c  stm32h7xx_hal_hash_ex.c  stm32h7xx_hal_hcd.c  stm32h7xx_hal_hrtim.c  stm32h7xx_hal_hsem.c  stm32h7xx_hal_i2c.c  stm32h7xx_hal_i2c_ex.c  stm32h7xx_hal_i2s.c  stm32h7xx_hal_irda.c  stm32h7xx_hal_iwdg.c  (+53 more)
UI/DigitalDash_480x272/SquareLine_Project/HAL_Driver/Src/Legacy/: stm32h7xx_hal_eth.c  stm32h7xx_hal_eth_ex.c
UI/DigitalDash_480x272/SquareLine_Project/Inc/: main.h  stm32h7b3i_discovery_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
UI/DigitalDash_480x272/SquareLine_Project/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c
UI/DigitalDash_480x272/SquareLine_Project/Utilities/STM32H7B3I-DK/: stm32h7b3i_discovery_audio.h  stm32h7b3i_discovery_camera.h  stm32h7b3i_discovery_eeprom.h  stm32h7b3i_discovery_lcd.c  stm32h7b3i_discovery_ospi.h  stm32h7b3i_discovery_sdram.h  stm32h7b3i_discovery_ts.h
UI/DigitalDash_480x272/SquareLine_Project/hal_stm_lvgl/tft/: tft.c  tft.h
UI/DigitalDash_480x272/SquareLine_Project/hal_stm_lvgl/touchpad/: touchpad.c
UI/DigitalDash_480x272/SquareLine_Project/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
UI/DigitalDash_480x272/SquareLine_Project/ui/components/: ui_comp_hook.c
UI/DigitalDash_480x272/SquareLine_Project/ui/fonts/: ui_font_BOOST.c  ui_font_Gauges.c  ui_font_MPH.c
UI/DigitalDash_480x272/SquareLine_Project/ui/images/: ui_img_1148324094.c  ui_img_1501971144.c  ui_img_1711266973.c  ui_img_2064914023.c  ui_img_420241965.c  ui_img_661487214.c  ui_img_983184844.c  ui_img_boostmeter_png.c  ui_img_gauge_status_dash_bg2_png.c  ui_img_gauge_status_gauge_tile00000_png.c  ui_img_gauge_status_gauge_tile00001_png.c  ui_img_gauge_status_gauge_tile00002_png.c  ui_img_gauge_status_gauge_tile00003_png.c  ui_img_gauge_status_gauge_tile00004_png.c  ui_img_gauge_status_gauge_tile00005_png.c  ui_img_gauge_status_gauge_tile00006_png.c  ui_img_main_tach_1_maintach00001_png.c  ui_img_main_tach_1_maintach00002_png.c  ui_img_main_tach_1_maintach00003_png.c  ui_img_main_tach_1_maintach00004_png.c  ui_img_main_tach_1_maintach00005_png.c  ui_img_main_tach_1_maintach00006_png.c  ui_img_main_tach_1_maintach00007_png.c  ui_img_main_tach_1_maintach00008_png.c  ui_img_main_tach_1_maintach00009_png.c  ui_img_main_tach_1_maintach00010_png.c  ui_img_main_tach_1_maintach00011_png.c  ui_img_main_tach_1_maintach00012_png.c  ui_img_main_tach_1_maintach00013_png.c  ui_img_main_tach_1_maintach00021_png.c  ui_img_main_tach_1_maintach00022_png.c  ui_img_main_tach_1_maintach00023_png.c  ui_img_main_tach_1_maintach00024_png.c  ui_img_main_tach_1_maintach00025_png.c  ui_img_main_tach_1_maintach00026_png.c  ui_img_main_tach_1_maintach00027_png.c  ui_img_main_tach_1_maintach00028_png.c  ui_img_main_tach_1_maintach00029_png.c  ui_img_main_tach_1_maintach00030_png.c  ui_img_main_tach_1_maintach00031_png.c  (+115 more)
UI/DigitalDash_480x272/SquareLine_Project/ui/screens/: ui_Screen1.c  ui_Screen1.h
assets/: template.c  template.h
legacy/DataLogger_Node_FreeRTOS/: main.cpp
